# other

./: ardrone_opencv_demo_tutorial.txt  gazebo_px4_sitl_offboard_simulation_tutorial.txt  offboard_tutorial.txt
ardrone_opencv_demo/: CMakeLists.txt  package.xml
ardrone_opencv_demo/launch/: demo.launch
ardrone_opencv_demo/src/: drone_status.h  opencv_demo.cpp
